# dobby-routes

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cn_routes.txt  cn_routes_annotated.txt  cn_routes_inverse.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml  update-routes.yml
.sisyphus/: handoff.md
denylists/: telegram.txt
output/: cn_routes.txt  cn_routes_annotated.txt  cn_routes_inverse.txt
src/dobby_routes/: __init__.py  cli.py  fetcher.py  optimizer.py  output.py  parser.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_optimizer.py  test_output.py  test_parser.py
