[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dobby-routes"
version = "0.1.0"
description = "China mainland IP route table generator"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "netaddr>=0.8.0",
    "requests>=2.28.0",
]

[project.scripts]
dobby-routes = "dobby_routes.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]
